--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
   <section class="py-5">
     <div class="container-xxl container-sm discover-main">
-      <h3>A trusted option for whatever you need 4 </h3>
+      <h3>A trusted option for whatever you need  </h3>
 
 
 <div class="height-0-auto">
@@ -329,7 +329,7 @@
 
 
 
-  <section class="py-5 pt-1" >
+  <section class="pt-5 " >
     <div class="container-xxl container-sm">
       <h3 class=" ">Find homes, rooms, or spaces shared by each other</h3>
 
@@ -566,14 +566,17 @@
 
       </div>
     </div>
-    <div class="d-flex justify-content-center py-3">
-      <a href="" class="btn-brand" title="">View all</a>
+   
 
-    </div>
+     <div class="d-flex justify-content-center py-3">
+       <a href="" class="btn-brand" title="">View all</a>
+      </div>
+
   </section>
 
 
-  <section class="mb-5">
+  <section class="bg py-5" style="background-image: url(img/BG\ \(2\).jpg);">
+  <section class="">
     <div class="container-xxl container-sm">
       <h3 class="mb-4">Why crewdogs?</h2>
 
@@ -776,7 +779,7 @@
 
 
   </section>
-
+</section>
 
   <footer class="desktop-version-footer">
     <div class="container-xxl container-sm">
