--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       height: 0px;
       overflow: hidden;
     }
+   
   </style>
 </head>
 
@@ -575,7 +576,7 @@
   </section>
 
 
-  <section class="bg py-5" style="background-image: url(img/BG\ \(2\).jpg);">
+  <section class="bg py-5" style="background-image: url(img/BG2.jpg);">
   <section class="">
     <div class="container-xxl container-sm">
       <h3 class="mb-4">Why crewdogs?</h2>
@@ -627,6 +628,18 @@
 
 
         <div class="review-box">
+          <div class="item">
+            <div class="review-card">
+              <h3>“9 Exceptional service. Can’t be faulted ”</h3>
+              <p class="btc-3 mt-3 fs-16">Norem ipsum dolor sit amet, consectetur adipiscing elit.Nunc vulputatelibero
+                et velit interdum, ac aliquet odio mattis.Class aptent taciti sociosquad litora torquent per
+              </p>
+              <div class="d-flex">
+                <div class="avatar"><img src="img/avatar.png" alt=""></div>
+                <div class="reviewer"><b>Kristie</b><span>Jun 2022</span></div>
+              </div>
+            </div><!--review card end-->
+            </div>
 
 
           <div class="item">
@@ -768,6 +781,8 @@
             </div><!--review card end-->
 
           </div> <!--item end-->
+
+         
 
 
 
