--- a/index1.html
+++ b/index1.html
@@ -466,9 +466,9 @@
               <div class="bgallery-img mb-3">
                 <div class="carousel-container">
                   <div class="carousel-slide">
-                    <img src="img/g2.jpg" loading="lazy" alt="Image 1">
-                    <img src="img/g3.jpg" loading="lazy" alt="Image 2">
-                    <img src="img/g1.jpg" loading="lazy" alt="Image 3">
+                    <img src="img/g2.jpg"  alt="Image 1">
+                    <img src="img/g3.jpg" alt="Image 2">
+                    <img src="img/g1.jpg"  alt="Image 3">
                   </div>
                 </div>
                 <div class="dots"></div>
@@ -490,6 +490,8 @@
           </div>
         </div><!--col card end here-->
 
+
+        
         <div class="cd-col">
           <div class="book-gallery" style="position: relative;">
             <a href="details.html">
@@ -727,7 +729,7 @@
 
 
 
- <section class=" pb-5" style="background-image: url(img/BG\ \(2\).jpg);">
+ <section class=" pb-5" style="background-image: url(img/BG2.jpg);">
   <section class="py-5">
     <div class="container-xxl container-sm">
       <h3 class="mb-4">Why crewdogs?</h2>
