--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </header>
   </div>
 
-  <div class="hero-search" style="overflow: hidden; margin-top: 6rem; padding-bottom: 3rem;">
+  <div class="hero-search" style="overflow: hidden; padding-top: 6rem; padding-bottom: 3rem;">
     <h1>Bringing the military community together</h1>
 
     <div class="d-flex mb-4" style=" min-height: 100px; height: fit-content;">
