--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
   </section>
 
 
-  <section id="Who-can-join" class="mb-5" style="padding: 5rem 0;" >
+  <section id="item-why" class="mb-5" style="padding: 5rem 0;" >
     <div class="container-xxl container-sm">
       <h3  class="mb-4">Who can join?</h2>
 
