--- a/index.html
+++ b/index.html
@@ -224,13 +224,12 @@
 
   <!--Hero section end here -->
 
-  <section class="py-5">
+  <section class="pt-5">
     <div class="container-xxl container-sm discover-main">
       <h3>A trusted option for whatever you need  </h3>
 
 
 <div class="height-0-auto">
-
 
       <div class="discover-box">
 
