--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
   <section class="">
     <div class="container-xxl container-sm">
       <h3 class="mb-4">Why crewdogs?</h3>
-        <p class="py-2 btc-3">
+        <p class="mb-0 btc-3">
           <b>Save money. Support each other. Give back to the community. </b><br><br>
 
           Founded by Veterans who want to bring our military community together to support each other. Crewdogs connects
