--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
   </section>
 
 
-  <section class="bg pt-5" style="background-image: url(img/BG2.jpg);">
+  <section class="bg py-5" style="background-image: url(img/BG2.jpg);">
 
   <section class="">
     <div class="container-xxl container-sm">
@@ -651,7 +651,7 @@
     <div class="container-xxl container-sm">
       <h3  class="mb-4">Who can join?</h2>
 
-        <p class=" btc-3">
+        <p class="mb-0 btc-3">
           Secured by ID.me or a military email, Crewdogs verifies Active Duty, National Guard, Reserves, Veterans,
           Retirees,
           Military Spouses, Surviving Spouses, Immediate Military Family Members, Dependents, and Parents.</p>
@@ -832,11 +832,6 @@
           </div> <!--item end-->
 
          
-
-
-
-
-
         </div><!--review-box end -->
 
     </div>
@@ -892,35 +887,34 @@
   
   </footer>
   
-  <footer class="mobile-version-footer p-2  align-items-center justify-content-evenly" style=" background-color: white; border-top: 1px solid #4444; height: 60px;"
+  <footer class="mobile-version-footer p-2 " 
     id="mobileFooter">
-    <div class=" mf-icon d-flex flex-column gap-1 justify-content-center align-items-center">
-      <img class="d-none " src="img/Search.svg" width="21.75px" height="21.75px" alt="">
-      <img  src="img/Search-filled.svg" width="21.75px" height="21.75px" alt="">
+    <div class=" mf-icon">
+      <img class="d-none " src="img/Search.svg"  alt="">
+      <img  src="img/Search-filled.svg"  alt="">
       <p id="toggleBtn" class="m-0 mobile-text-footer" style="color: #0D99FF;">Search</p>
     </div>
-    <div class="mf-icon d-flex flex-column gap-1 justify-content-center align-items-center">
-      <img src="img/travel.svg" width="21.75px" height="21.75px" alt="">
-      <img class="d-none" src="img/travel-filled.svg" width="21.75px" height="21.75px" alt="">
+    <div class="mf-icon">
+      <img src="img/travel.svg"  alt="">
+      <img class="d-none" src="img/travel-filled.svg"  alt="">
       <p class=" m-0 mobile-text-footer">Travel</p>
     </div>
-    <div class="mf-icon d-flex flex-column gap-1 justify-content-center align-items-center">
-      <img src="img/Home.svg" width="21.75px" height="21.75px" alt="">
-      <img class="d-none" src="img/Home-filled.svg" width="21.75px" height="21.75px" alt="">
+    <div class="mf-icon ">
+      <img src="img/Home.svg"  alt="">
+      <img class="d-none" src="img/Home-filled.svg" alt="">
       <p class=" m-0 mobile-text-footer">Home</p>
     </div>
-    <div class=" mf-icon d-flex flex-column gap-1 justify-content-center align-items-center">
-      <img src="img/Message.svg" width="21.75px" height="21.75px" alt="">
-      <img class="d-none" src="img/Message-filled.svg" width="21.75px" height="21.75px" alt="">
+    <div class=" mf-icon">
+      <img src="img/Message.svg"  alt="">
+      <img class="d-none" src="img/Message-filled.svg" alt="">
       <p class=" m-0 mobile-text-footer">Message</p>
     </div>
-    <div class="mf-icon d-flex flex-column gap-1 justify-content-center align-items-center">
-      <img src="img/Profile.svg" width="21.75px" height="21.75px" alt="">
-      <img class="d-none" src="img/Profile-filled.svg" width="21.75px" height="21.75px" alt="">
+    <div class="mf-icon">
+      <img src="img/Profile.svg"  alt="">
+      <img class="d-none" src="img/Profile-filled.svg"  alt="">
       <p class="m-0 mobile-text-footer" >Log in</p>
     </div>
   </footer>
-
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
 
