--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
     <div class="container-xxl container-sm">
       <h3  class="mb-4">Who can join?</h2>
 
-        <p class="mb-0 btc-3">
+        <p class=" btc-3">
           Secured by ID.me or a military email, Crewdogs verifies Active Duty, National Guard, Reserves, Veterans,
           Retirees,
           Military Spouses, Surviving Spouses, Immediate Military Family Members, Dependents, and Parents.</p>
