--- a/dashBoard/listingDetailsDashboard.html
+++ b/dashBoard/listingDetailsDashboard.html
@@ -12,10 +12,7 @@
   <link href="../css/slick-slider.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="../css/s-custom.css">
-  <link rel="stylesheet" href="../css/scrollbar.css">
   <link rel="stylesheet" href="../css/fonts.css">
-  <link rel="stylesheet" href="../css/message.css">
   <link rel="stylesheet" href="../css/dashboard.css">
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
@@ -230,31 +227,30 @@
         </div>
         <hr>
         <p class="dashboard-font-6">Property information</p>
-        <p class="personalinfor-header-1">Listing title</p>
 
         <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Name</label>
-        <div class="input-name" style="margin-bottom: 20px; padding: 5px !important; border-radius: 16px;">
+        <div class="input-name in-put">
           <input class="" style="border: none; outline: none; width: 93%;" type="text"
             placeholder="A small room in denver">
           <a href="" class="edit-name">Edit</a>
         </div>
 
         <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Listing nickname</label>
-        <div class="input-name" style="margin-bottom: 20px; padding: 5px !important; border-radius: 16px;">
+        <div class="input-name in-put" >
           <input class="" style="border: none; outline: none; width: 93%;" type="text"
             placeholder="A small room in denver">
           <a href="" class="edit-name">Edit</a>
         </div>
 
         <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Address</label>
-        <div class="input-name" style="margin-bottom: 20px; padding: 5px !important; border-radius: 16px;">
+        <div class="input-name in-pute">
           <input class="" style="border: none; outline: none; width: 93%;" type="text"
             placeholder="A small room in denver">
           <a href="" class="edit-name">save</a>
         </div>
 
-        <div class="border p-2 d-flex gap-1" style="border-radius: 1rem; background-color:  #fff;">
-          <div class="1 w-50">
+        <div class="border p-2 d-flex gap-5" style="border-radius: 1rem; background-color:  #fff;">
+          <div class="1 w-50 d-flex  flex-column l-d-d">
             <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Property type</label>
             <select class="ui dropdown form-select " style=" margin-bottom: 20px; padding: 24px !important;">
               <option value="">Military member</option>
@@ -315,40 +311,26 @@
             </div>
             <div class="flex-c ">
               <p>Bedrooms</p>
-              <div class="flex-c-1">
-                <div class="svg-1">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="2" viewBox="0 0 12 2" fill="none">
-                    <path
-                      d="M0.666748 0.863281C0.390606 0.863281 0.166748 1.08714 0.166748 1.36328C0.166748 1.63942 0.390606 1.86328 0.666748 1.86328H11.3334C11.6096 1.86328 11.8334 1.63942 11.8334 1.36328C11.8334 1.08714 11.6096 0.863281 11.3334 0.863281H0.666748Z"
-                      fill="#E7E7E7" />
-                  </svg>
-                </div>
-                <p class="mb-0">1</p>
-
-                <div class="svg-1">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="13" viewBox="0 0 12 13" fill="none">
-                    <path
-                      d="M6.49984 1.02734C6.49984 0.751201 6.27598 0.527344 5.99984 0.527344C5.72369 0.527344 5.49984 0.751201 5.49984 1.02734L5.49984 5.86068H0.666504C0.390362 5.86068 0.166504 6.08454 0.166504 6.36068C0.166504 6.63682 0.390362 6.86068 0.666504 6.86068H5.49984V11.694C5.49984 11.9702 5.7237 12.194 5.99984 12.194C6.27598 12.194 6.49984 11.9702 6.49984 11.694V6.86068H11.3332C11.6093 6.86068 11.8332 6.63682 11.8332 6.36068C11.8332 6.08454 11.6093 5.86068 11.3332 5.86068H6.49984L6.49984 1.02734Z"
-                      fill="#747474" />
-                  </svg>
-                </div>
-              </div>
+             <div class="nput-ft">
+                <input class="" type="text">
+                <p class="mb-0">ft</p>
+             </div>
             </div>
           </div>
         </div>
 
-        <div class="border p-2 d-flex gap-1 mt-3" style="border-radius: 1rem; background-color:  #fff;">
-          <div class="1 w-50">
+        <div class="border p-2 d-flex gap-5 mt-3" style="border-radius: 1rem; background-color:  #fff;">
+          <div class="1 w-50 l-d-d">
             <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Property type</label>
-            <div class="input-name " style="margin-bottom: 20px; padding: 15px 5px !important; border-radius: 16px;">
-              <input class="" style=" margin: 10px !important; border: none; outline: none; width: 93%;" type="text"
-                placeholder="A small room in denver">
+            <div class="input-name p-3" style="margin-bottom: 20px; border-radius: 16px;">
+              <p class="textarea-1 mb-0" >A small room in denver</p>
               <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
               </div>
             </div>
 
             <label for="Name " class=" personalinfor-header-1" style="margin-bottom: 16px;">Property type</label>
+            <br>
             <select class="ui dropdown form-select " style=" margin-bottom: 20px; padding: 24px !important;">
               <option value="">Military member</option>
               <option value="1">yes</option>
@@ -356,7 +338,6 @@
             </select>
           </div>
           <div class="2 w-50 dashboard-font-7">
-            <p class="personalinfor-header-1" style="line-height: 30px;">Property details</p>
             <div class="flex-c  ">
               <p>Bedrooms</p>
               <div class="flex-c-1">
@@ -621,7 +602,8 @@
  <hr>
    <div>
     <label for="Name " class=" personalinfor-header-1" style="margin-bottom: 16px;">Property type</label>
-    <select class="ui dropdown form-select " style=" margin-bottom: 20px; padding: 24px !important;">
+    <br>
+    <select class="ui dropdown form-select " style=" margin-bottom: 20px; max-width: 100% !important; padding: 24px !important;">
       <option value="">Free parking on premises</option>
       <option value="1">yes</option>
       <option value="0">no</option>
@@ -633,11 +615,6 @@
     </div>
   </div>
   </div>
-
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="../script.js"></script>
-  <script src="../js/jquery-3.7.1.js"></script>
-  <script src="../js/headerFooter.js"></script>
 
 </body>
 
