--- a/dashBoard/listingDashboard.html
+++ b/dashBoard/listingDashboard.html
@@ -12,8 +12,6 @@
   <link href="../css/slick-slider.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="../css/s-custom.css">
-  <link rel="stylesheet" href="../css/scrollbar.css">
   <link rel="stylesheet" href="../css/fonts.css">
   <link rel="stylesheet" href="../css/message.css">
   <link rel="stylesheet" href="../css/dashboard.css">
@@ -42,6 +40,7 @@
       border-radius: 1rem;
       align-items: center;
       padding: 0 .5rem;
+      height: 48px;
     }
 
     .input-search input {
@@ -168,13 +167,13 @@
         <div class="tabel-1">
           <div class="tabel-2">
             <p class="personalinfor-header-1">Title</p>
-            <p class="personalinfor-header-1">Status</p>
+            <p class="personalinfor-header-1" style="margin-right: 11%;">Status</p>
           </div>
         </div>
         <div class="tabel-1">
           <div class="tabel-2">
             <p class="personalinfor-header-1">Address</p>
-            <p class="personalinfor-header-1">Listing type</p>
+            <p class="personalinfor-header-1" style="width: 40%;">Listing type</p>
           </div>
         </div>
       </div>
@@ -199,107 +198,12 @@
         <div class="tabel-1">
           <div class="tabel-2">
             <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
-            <p class="offer-header-font-4 mb-0">Room</p>
+            <p class="offer-header-font-4 mb-0 " style="width: 40%;">Room</p>
           </div>
         </div>
       </div>
       <hr>
-      <div class="tabel">
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <div class="d-flex gap-2">
-              <img src="../img/g1.jpg" alt="">
-              <div class="d-flex justify-content-evenly flex-column">
-                <p class="personalinfor-header-1 mb-0">A small room in denver</p>
-                <p class="msg-font-3 mb-0">Denver, Colorado</p>
-              </div>
-            </div>
-            <div class="d-flex">
-              <button class="availabel-button-tabel ">Available</button>
-              <button class="Unavailable-button-tabel active-button-red">Unavailable</button>
-            </div>
-          </div>
-        </div>
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
-            <p class="offer-header-font-4 mb-0">Room</p>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="tabel">
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <div class="d-flex gap-2">
-              <img src="../img/g1.jpg" alt="">
-              <div class="d-flex justify-content-evenly flex-column">
-                <p class="personalinfor-header-1 mb-0">A small room in denver</p>
-                <p class="msg-font-3 mb-0">Denver, Colorado</p>
-              </div>
-            </div>
-            <div class="d-flex">
-              <button class="availabel-button-tabel active-button-blue">Available</button>
-              <button class="Unavailable-button-tabel">Unavailable</button>
-            </div>
-          </div>
-        </div>
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
-            <p class="offer-header-font-4 mb-0">Room</p>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="tabel">
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <div class="d-flex gap-2">
-              <img src="../img/g1.jpg" alt="">
-              <div class="d-flex justify-content-evenly flex-column">
-                <p class="personalinfor-header-1 mb-0">A small room in denver</p>
-                <p class="msg-font-3 mb-0">Denver, Colorado</p>
-              </div>
-            </div>
-            <div class="d-flex">
-              <button class="availabel-button-tabel ">Available</button>
-              <button class="Unavailable-button-tabel active-button-red" >Unavailable</button>
-            </div>
-          </div>
-        </div>
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
-            <p class="offer-header-font-4 mb-0">Room</p>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="tabel">
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <div class="d-flex gap-2">
-              <img src="../img/g1.jpg" alt="">
-              <div class="d-flex justify-content-evenly flex-column">
-                <p class="personalinfor-header-1 mb-0">A small room in denver</p>
-                <p class="msg-font-3 mb-0">Denver, Colorado</p>
-              </div>
-            </div>
-            <div class="d-flex">
-              <button class="availabel-button-tabel ">Available</button>
-              <button class="Unavailable-button-tabel active-button-red">Unavailable</button>
-            </div>
-          </div>
-        </div>
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
-            <p class="offer-header-font-4 mb-0">Room</p>
-          </div>
-        </div>
-      </div>
-      <hr>
+ 
     </div>
   </div>
 
