--- a/dashBoard/pricingApi.html
+++ b/dashBoard/pricingApi.html
@@ -12,10 +12,7 @@
   <link href="../css/slick-slider.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="../css/s-custom.css">
-  <link rel="stylesheet" href="../css/scrollbar.css">
   <link rel="stylesheet" href="../css/fonts.css">
-  <link rel="stylesheet" href="../css/message.css">
   <link rel="stylesheet" href="../css/dashboard.css">
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
@@ -222,7 +219,7 @@
         <div class="border p-3" style="border-radius: 1rem;">
 
           <div class="d-flex justify-content-between align-items-start">
-            <div class="">
+            <div class="w-100">
               <p class="msg-side-font-14">Nightly</p>
               <div class="pricing-daily " style="position: relative;">
                 <input class="" style="outline: none;" type="text" placeholder="Filled by an external source">        
