--- a/dashBoard/rulesAndPolices.html
+++ b/dashBoard/rulesAndPolices.html
@@ -12,10 +12,7 @@
   <link href="../css/slick-slider.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="../css/s-custom.css">
-  <link rel="stylesheet" href="../css/scrollbar.css">
   <link rel="stylesheet" href="../css/fonts.css">
-  <link rel="stylesheet" href="../css/message.css">
   <link rel="stylesheet" href="../css/dashboard.css">
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
@@ -350,33 +347,31 @@
           <hr class="mt-0">
           <div class="p-3">
           <p class="dashboard-font-14 ">Check-in window</p>
-             <div class=" dropdown-time  border" >
-              <select class="" aria-label="Default select example">
-                <option selected>Starting Time</option>
-                <option value="1">12:00</option>
-                <option value="1">1:00</option>
-                <option value="2">2:00</option>
-                <option value="3">3:00</option>
+             <div class="d-flex dropdown-time dropdown-time-1  border" >
+              <select class="select-time form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
               </select>
-
-              <select class="" aria-label="Default select example">
-                <option selected>End time</option>
-                <option value="1">12:00</option>
-                <option value="1">1:00</option>
-                <option value="2">2:00</option>
-                <option value="3">3:00</option>
+              <div class="divider-line"></div>
+              <select class="select-time form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
               </select>
              </div>
           </div>
           <div class="p-3">
             <p class="dashboard-font-14 ">Check-in window</p>
-            <div class=" dropdown-time  border" >
-             <select class="" aria-label="Default select example">
-               <option selected>Starting Time</option>
-               <option value="1">One</option>
-               <option value="2">Two</option>
-               <option value="3">Three</option>
-             </select>
+            <div class="dropdown-time dropdown-time-2" >
+              <select class="select-time form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
           </div>
         </div>
         <hr>
@@ -405,7 +400,7 @@
           <p class="dashboard-font-16">Long-term: <span> Standard</span></p>
         </div>
 
-        <div class="boder p-3">
+        <div class="border p-3" style="border-radius: 1rem;">
           <p class="dashboard-font-18">Short-term</p>
           <div class="d-flex align-items-center">
             <div class="form-check">
