--- a/dashBoard/listingDetailsDashboard.html
+++ b/dashBoard/listingDetailsDashboard.html
@@ -154,8 +154,8 @@
   </div>
 
   <div class="container" style="max-width: 1550px;">
-    <div class="d-flex justify-content-between align-items-start container">
-      <div class="">
+    <div class="d-flex mobile-padding-none flex-wrap gap-3 justify-content-between align-items-start container">
+      <div class="mobile-flex">
         <p class=" dashboard-font-5">A small room in denver</p>
         <div class="mb-0 pi-font-4 d-flex gap-1 align-items-center">
           Change listing
@@ -184,8 +184,8 @@
 
   <hr>
 
-  <div class="container" style="max-width: 1550px;">
-    <div class="container d-flex justify-content-evenly align-items-start">
+  <div class="container mobile-padding-none" style="max-width: 1550px;">
+    <div class="container mobile-padding-none justify-content-evenly align-items-start">
       <div class="left-l-d">
         <div class="1">
           <p class="ph-font-2" style="color: #4b4b4d;">Listing details</p>
@@ -249,8 +249,8 @@
           <a href="" class="edit-name">save</a>
         </div>
 
-        <div class="border p-2 d-flex gap-5" style="border-radius: 1rem; background-color:  #fff;">
-          <div class="1 w-50 d-flex  flex-column l-d-d">
+        <div class=" flex-column-mobile border p-2 d-flex gap-5" style="border-radius: 1rem; background-color:  #fff;">
+          <div class="1 flex-grow-1 d-flex  flex-column l-d-d">
             <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Property type</label>
             <select class="ui dropdown form-select " style=" margin-bottom: 20px; padding: 24px !important;">
               <option value="">Military member</option>
@@ -265,7 +265,7 @@
               <option value="0">no</option>
             </select>
           </div>
-          <div class="2 w-50 dashboard-font-7">
+          <div class="2 flex-grow-1 dashboard-font-7">
             <p class="personalinfor-header-1" style="line-height: 30px;">Property details</p>
             <div class="flex-c  ">
               <p>Bedrooms</p>
@@ -312,15 +312,15 @@
             <div class="flex-c ">
               <p>Bedrooms</p>
              <div class="nput-ft">
-                <input class="" type="text">
+                <input class="" placeholder="24" type="text">
                 <p class="mb-0">ft</p>
              </div>
             </div>
           </div>
         </div>
 
-        <div class="border p-2 d-flex gap-5 mt-3" style="border-radius: 1rem; background-color:  #fff;">
-          <div class="1 w-50 l-d-d">
+        <div class="flex-column-mobile border p-2 d-flex gap-5 mt-3 " style="border-radius: 1rem; background-color:  #fff;">
+          <div class="1 flex-grow-1 l-d-d">
             <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Property type</label>
             <div class="input-name p-3" style="margin-bottom: 20px; border-radius: 16px;">
               <p class="textarea-1 mb-0" >A small room in denver</p>
@@ -337,7 +337,7 @@
               <option value="0">no</option>
             </select>
           </div>
-          <div class="2 w-50 dashboard-font-7">
+          <div class="2 flex-grow-1 dashboard-font-7">
             <div class="flex-c  ">
               <p>Bedrooms</p>
               <div class="flex-c-1">
