--- a/dashBoard/pricingDashboard.html
+++ b/dashBoard/pricingDashboard.html
@@ -184,8 +184,8 @@
 
   <hr>
 
-  <div class="container" style="max-width: 1550px;">
-    <div class="container d-flex justify-content-evenly align-items-start ">
+  <div class="container mobile-padding-none" style="max-width: 1550px;">
+    <div class="container mobile-padding-none d-flex justify-content-evenly align-items-start ">
       <div class="left-l-d">
         <div class="1">
           <p class="ph-font-2" style="color: #4b4b4d;">Listing details</p>
@@ -242,12 +242,12 @@
             <div class="">
               <p class="msg-side-font-14">Daily</p>
               <div class="pricing-daily " style="position: relative;">
-                <div class="input-name "
-                  style="margin-bottom: 20px; padding: 5px 10px !important; border-radius: 16px;">
-                  <p class=" mb-0 edit-name" style="color: #ACACB0; text-decoration: none;">$</p>
-                  <input class="" style="border: none; outline: none; width: 93%;" type="text" placeholder="24">
+
+                <div class="input-11" style=" width: 200px; max-width: 100%;">
+                    <p class="mb-0">$</p>
+                    <input type="text" placeholder="24" class="damage-placeholder-text form-control"> 
+                  </div>
                 </div>
-              </div>
             </div>
             <div class="form-check form-switch">
               <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
@@ -267,10 +267,9 @@
               </div>
 
               <div class="pricing-weekly " style="position: relative;">
-                <div class="input-name "
-                  style="margin-bottom: 20px; padding: 5px 10px !important; border-radius: 16px;">
-                  <p class=" mb-0 edit-name" style="color: #ACACB0; text-decoration: none;">$</p>
-                  <input class="" style="border: none; outline: none; width: 93%;" type="text" placeholder="24">
+                <div class="input-11" style=" width: 200px; max-width: 100%;">
+                  <p class="mb-0">$</p>
+                  <input type="text" placeholder="24" class="damage-placeholder-text form-control"> 
                 </div>
               </div>
             </div>
@@ -293,10 +292,9 @@
               </div>
 
               <div class="pricing-Monthly " style="position: relative;">
-                <div class="input-name "
-                  style="margin-bottom: 20px; padding: 5px 10px !important; border-radius: 16px;">
-                  <p class=" mb-0 edit-name" style="color: #ACACB0; text-decoration: none;">$</p>
-                  <input class="" style="border: none; outline: none; width: 93%;" type="text" placeholder="24">
+                <div class="input-11" style=" width: 200px; max-width: 100%;">
+                  <p class="mb-0">$</p>
+                  <input type="text" placeholder="24" class="damage-placeholder-text form-control"> 
                 </div>
               </div>
             </div>
@@ -405,7 +403,7 @@
         </div>
         <hr>
         <p class="dashboard-font-11 mb-0">Length of stay discounts</p>
-        <div class=" d-flex w-100 justify-content-evenly gap-5 mt-3">
+        <div class=" d-flex flex-column-mobile w-100 justify-content-evenly gap-5 mt-3">
             <div class="w-100"><p class="dashboard-font-12">Weekly for 7 nights or more</p>
               <div class="input-11">
                 <p class="mb-0">%</p>
