--- a/dashBoard/rulesAndPolices.html
+++ b/dashBoard/rulesAndPolices.html
@@ -158,9 +158,9 @@
     <hr class="mt-0">
   </div>
 
-  <div class="container" style="max-width: 1550px;">
-    <div class="d-flex justify-content-between align-items-start container">
-      <div class="">
+  <div class="container mobile-padding-none" style="max-width: 1550px;">
+    <div class="d-flex flex-wrap justify-content-between align-items-start container">
+      <div class="mobile-flex">
         <p class=" dashboard-font-5">A small room in denver</p>
         <div class="mb-0 pi-font-4 d-flex gap-1 align-items-center">
           Change listing
@@ -189,8 +189,8 @@
 
   <hr>
 
-  <div class="container" style="max-width: 1550px;">
-    <div class="container d-flex justify-content-evenly align-items-start">
+  <div class="container mobile-padding-none" style="max-width: 1550px;">
+    <div class="container mobile-padding-none d-flex justify-content-evenly align-items-start">
       <div class="left-l-d">
         <div class="1">
           <p class="ph-font-2" style="color: #4b4b4d;">Listing details</p>
