--- a/dashBoard/booking.html
+++ b/dashBoard/booking.html
@@ -15,136 +15,18 @@
   <link rel="stylesheet" href="../css/s-custom.css">
   <link rel="stylesheet" href="../css/fonts.css">
   <link rel="stylesheet" href="../css/message.css">
+  <link rel="stylesheet" href="../css/dashboard.css">
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-  <style>
-    .date-box {
-      display: flex;
-      width: 128px;
-      min-width: 128px;
-      height: 128px;
-      min-height: 128px;
-      padding: 8px;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: flex-start;
-      border-top: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-      border-right: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-      border-bottom: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-      border-left: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-      background: #FFF;
-    }
-
-    .date-box-item {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-    }
-
-    .date-box-active {
-      border-top: 1px solid var(--Primary-Primary-50, #0D99FF);
-      border-right: 0.5px solid var(--Primary-Primary-50, #0D99FF);
-      border-bottom: 1px solid var(--Primary-Primary-50, #0D99FF);
-      border-left: 1px solid var(--Primary-Primary-50, #0D99FF);
-      background: #FFF;
-    }
-
-    .scroll-body-calander::-webkit-scrollbar {
-      display: none !important;
-    }
-
-    .coll {
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 3px;
-      min-width: fit-content;
-    }
-
-    .activeblu {
-      color: #0D99FF;
-      background-color: #F3FAFE;
-      border: 1px solid #F3FAFE;
-    }
-
-    .dashboard-items {
-      display: block;
-      margin-bottom: 3rem;
-    }
-
-    .dashboard-item {
-      width: 293px;
-      border-radius: 10px;
-      border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-      background: var(--White-White-100, #FFF);
-    }
-
-    .dashboard-item p {
-      line-height: 21px !important;
-    }
-
-    .dashboard-item hr {
-      border: 1px solid rgba(214, 215, 216, 0.8);
-      margin: 0 !important;
-    }
-
-    .dashboard-item-top {
-      padding: 24px;
-      width: 100%;
-    }
-
-    .dashboard-item-bottom {
-      display: flex;
-      padding: 16px 24px;
-      justify-content: center;
-      align-items: flex-start;
-      gap: 10px;
-      align-self: stretch;
-      color: var(--GREY, #747474);
-      font-family: "DM Sans";
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 21px;
-      /* 175% */
-      letter-spacing: -0.32px;
-    }
-
-    .dot {
-      display: block !important;
-      color: #acacb0;
-      fill: var(--Grayscale-Gray-60, #ACACB0);
-    }
-    .max-w {
-      max-width: 1550px;
-    }
-
-    @media (max-width:700px) {
-      #profile-mobile-version {
-        display: block !important;
-      }
-
-      .profile-desktop-version {
-        display: none !important;
-      }
-      .overflow {
-        margin-right: 0px !important;
-        padding-right: 0px !important;
-      }
-      .overflow::-webkit-scrollbar {
-   display: none !important;
-}
-    }
-  </style>
 </head>
 
 <body>
 
   <div id="dashboardHeader"></div>
-<div class="container" >
+<div class="container mobile-margin-r-none" >
 
 
   <div class=" mobile-none container max-w">
@@ -152,7 +34,7 @@
   </div>
 
   <br>
-  <div class="container max-w overflow" style="overflow-x: scroll;">
+  <div class="container  max-w overflow" style="overflow-x: scroll;">
   <div class="d-flex gap-2">
     <div class="coll col-message-1 activeblu" onclick="showContent('content1')">All bookings</div>
     <div class="coll col-message-1" onclick="showContent('content2')">Requests</div>
@@ -163,6 +45,7 @@
   </div>
 </div>
 
+  
   <section class="container max-w">
 
     <div class="mt-3">
