--- a/dashBoard/photos.html
+++ b/dashBoard/photos.html
@@ -154,8 +154,8 @@
   </div>
 
   <div class="container" style="max-width: 1550px;">
-    <div class="d-flex justify-content-between align-items-start container">
-      <div class="">
+    <div class="d-flex mobile-padding-none flex-wrap justify-content-between align-items-start container">
+      <div class="mobile-flex">
         <p class=" dashboard-font-5">A small room in denver</p>
         <div class="mb-0 pi-font-4 d-flex gap-1 align-items-center">
           Change listing
@@ -185,7 +185,7 @@
   <hr>
 
   <div class="container" style="max-width: 1550px;">
-    <div class="container d-flex justify-content-evenly align-items-start ">
+    <div class="mobile-padding-none container d-flex justify-content-evenly align-items-start ">
       <div class="left-l-d">
         <div class="1">
           <p class="ph-font-2" style="color: #4b4b4d;">Listing details</p>
