--- a/listings.html
+++ b/listings.html
@@ -9,6 +9,7 @@
   <link href="css/menu.css" rel="stylesheet">
   <link href="css/slick-slider.css" rel="stylesheet">
   <link rel="stylesheet" href="css/s-custom.css">
+  <link rel="stylesheet" href="css/s-custom2.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -18,6 +19,22 @@
 </head>
 
 <body>
+  <div id="search-bar" class="search-main " >
+    <div class="d-flex desktop-version-none align-items-center justify-content-evenly gap-2 mt-2">
+      <div class="d-flex align-items-center gap-2  search-bar search-bar-container w-100 border m-0"
+        style="border-radius: 2rem; padding: 6px 16px;">
+        <div>
+          <img src="img/Search 2.png" width="20px" height="20px" alt="">
+        </div>
+        <div class="">
+          <p class="dm-bold-6 m-0" style="color: #4B4B4D;">Where to?</p>
+          <p class="custom-search m-0 p-0" style="color: #4B4B4D;">
+            Anytime • Add guests
+          </p>
+        </div>
+      </div>
+      </div>
+      </div>
 
   <div class="float-btn-listing" style="z-index: 100;">
     <button class="btn dm-show-map-font" style="background: #0D99FF; color: #ffffff; border-radius: 24px;  ">Show map <i class="bi bi-map"></i></button>
@@ -1159,9 +1176,7 @@
 
 
 
- 
-
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 
   </div>
 
@@ -1435,10 +1450,42 @@
 
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <script src="./script.js"></script>
     <script src="js/jquery-3.7.1.js"></script>
   <script src="js/headerFooter.js"></script>
   <script>
+
+//mobile search bar
+let prevScrollPos = window.pageYOffset;
+const scrollThreshold = 10; // Adjust this value to control when the search bar should appear
+
+window.onscroll = function() {
+  let currentScrollPos = window.pageYOffset;
+  if (currentScrollPos > scrollThreshold) {
+    document.getElementById("search-bar").style.top = "0";
+  } else {
+    document.getElementById("search-bar").style.top = "-150px"; // Adjust based on the height of your search bar
+  }
+  prevScrollPos = currentScrollPos;
+}
+
+//mobile footer
+let lastScrollTop = 0;
+
+window.addEventListener("scroll", function () {
+  let currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+
+  if (currentScroll > lastScrollTop) {
+    // Scroll down
+    document.getElementById("mobileFooter").style.transform = "translateY(100%)";
+  } else {
+    // Scroll up
+    document.getElementById("mobileFooter").style.transform = "translateY(0)";
+  }
+
+  lastScrollTop = currentScroll <= 0 ? 0 : currentScroll; // For Mobile or negative scrolling
+});
+
+
     $('.burger, .overlay').click(function () {
       $('.burger').toggleClass('clicked');
       $('.overlay').toggleClass('show');
