--- a/listings-map.html
+++ b/listings-map.html
@@ -10,6 +10,7 @@
   <link href="css/menu.css" rel="stylesheet">
   <link href="css/slick-slider.css" rel="stylesheet">
   <link rel="stylesheet" href="css/s-custom.css">
+  <link rel="stylesheet" href="css/fonts.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -17,6 +18,21 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
  <style>
+   .col-message-1 {
+  border: 1px solid #4444;
+  border-radius: 1rem;
+  color: #222;
+  text-align: center;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  /* 128.571% */
+  padding: 11px 17px;
+  cursor: pointer;
+  margin-bottom: 0 !important;
+}
   @media (max-width:1000px) {
     .flex-wrap-1000 {
       flex-direction: column !important;
@@ -49,10 +65,18 @@
 
  <div id="header2"></div>
 
-
+ <div class="text-center pb-2"style="margin-top: 6rem;">
+  <div class="d-flex gap-2 flex-wrap w-100">
+    <p class="col-message-1 activeblue">All</p>
+    <p class="col-message-1">Hosting</p>
+    <p class="col-message-1">Traveling</p>
+    <p class="col-message-1">Support</p>
+  </div>
+</div>
 
   <main class="mx-auto d-flex align-items-start gap-4 "
     style="max-width: 1450px; margin-top: 5rem; color: #fff; height:fit-content ;">
+    
   <section class=" container flex-wrap-1000 d-flex gap-3 justify-content-evenly">
 
  
@@ -171,7 +195,7 @@
 
     </div>
 
-    <div class="" style=" position: sticky; top:0; height: 100dvh;">
+    <div class="" style=" position: sticky; top:5rem; height: 100dvh;">
       <img style="object-fit: fill;" width="100%" src="img/map.PNG" alt="">
     </div> 
   </section>
