--- a/header2.html
+++ b/header2.html
@@ -84,39 +84,53 @@
 
     </div>
     
-    <div class="col-md-3 d-flex justify-content-end mobile-version-none">
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link fs-16 bp-3 " style="min-width: fit-content;" aria-current="page">Add my place</a></li>
-      </ul>
-      <!--menu items-->
-      <div class="dropdown">
-        <button class="btn btn-outline-secondary dropdown" type="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          <i class="bi bi-list"></i>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-end cd-menu-item" >
-
-          <li class="cdmenu-item">
-            <div class="d-grid"><button class="btn btn-primary dropdown" type="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Sign up
-              </button></div>
-          </li>
-          <li class="cdmenu-item">
-            <div class="d-grid"><button class="btn btn-outline-secondary dropdown" type="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Log in
-              </button></div>
-          </li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-          <li><a class="dropdown-item" href="#">View collections</a></li>
-          <li><a class="dropdown-item" href="#">Add my place</a></li>
-          <li><a class="dropdown-item" href="#">FAQs</a></li>
-          <li><a class="dropdown-item" href="#">Help</a></li>
+      <div class="col-md-3 d-flex justify-content-end mobile-version-none">
+        <ul class="nav nav-pills">
+            <li class="nav-item"><a href="#" class="nav-link fs-16 bp-3 fit-content" aria-current="page">Add my place</a></li>
         </ul>
-      </div>
+      <!--menu items-->
+      <div class="dropdown mobile-version-none">
+        <button class="dropdown" style="background-color: white; display: flex;
+padding: 16px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 16px;
+border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+background: #FFF;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="8" viewBox="0 0 16 8" fill="none">
+                <path d="M1 7H15M1 1H15" stroke="#121212" stroke-width="1.5" stroke-linecap="round" />
+            </svg>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end cd-menu-item" style="border-radius: 1rem;">
+
+            <li class="cdmenu-item">
+                <div class="d-grid">
+                    <button class="btn dropdown header-dropdown-font-1"
+                            style="border-radius: 1rem; background-color: #0D99FF; " type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                        Sign up
+                    </button>
+                </div>
+            </li>
+            <li class="cdmenu-item">
+                <div class="d-grid">
+                    <button class="btn header-dropdown-font-2 border dropdown"
+                            style="  border-radius: 1rem;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Log in
+                    </button>
+                </div>
+            </li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item header-dropdown-font-2" href="#">View collections</a></li>
+            <li><a class="dropdown-item header-dropdown-font-2" href="#">Add my place</a></li>
+            <li><a class="dropdown-item header-dropdown-font-2" href="#">FAQs</a></li>
+            <li><a class="dropdown-item header-dropdown-font-2" href="#">Help</a></li>
+        </ul>
+    </div>
+
 
 
       <!--menu items end-->
