--- a/listings.html
+++ b/listings.html
@@ -60,6 +60,7 @@
           </p>
         </div>
       </div>
+      
       <div class="filter-button ">
         <button type="button" class="btn d-flex   gap-1 btn-cd-secondary btn-pill" data-bs-toggle="modal"
          style="background-color: white;"
@@ -250,7 +251,7 @@
 
 
 
-  <section class="py-5">
+  <section class="pb-5" style="padding-top: 1rem;">
     <div class="container-xxl container-sm">
       <div class="container filter-menu-main d-flex justify-content-between align-items-center" style="max-width: 1450px;"> 
         <div class="over-x-scroll">
